description:
* Adding Tclxml3.2 package into ptwidgets1.2
* Using Tclxml3.2 dom parser instead of handwritten one to optimize reading performance.


changeset:   921:d7f457774400
user:        Trevor Williams <phase1geo@users.sourceforge.net>
date:        Mon Mar 30 18:22:56 2015 -0500
files:       lib/ptwidgets1.2/library/specl.tcl lib/version.tcl
description:
* Fixing specl issues with new XML parser.


changeset:   922:16e1b79fd3e6
user:        Trevor Williams <phase1geo@users.sourceforge.net>
date:        Mon Mar 30 21:16:12 2015 -0500
files:       lib/gui.tcl lib/menus.tcl lib/version.tcl
description:
* Fixing menu states for "Show Difference View", "Favorite/Unfavorite", "Favorites" and "Show in Sidebar" menu options.


changeset:   923:2d067c7b5717
user:        Trevor Williams <phase1geo@users.sourceforge.net>
date:        Mon Mar 30 22:23:30 2015 -0500
files:       lib/gui.tcl lib/menus.tcl lib/version.tcl
description:
* Several state fixes for difference mode in sidebar and menus.


changeset:   924:9df014f6cc67
tag:         tip
user:        Trevor Williams <phase1geo@users.sourceforge.net>
date:        Tue Mar 31 00:04:23 2015 -0500
files:       lib/diff.tcl lib/gui.tcl lib/menus.tcl lib/version.tcl
description:
* Allowing difference widgets to be affected by window theme changes.
* Fixing bug in menus that stopped the file menu from being visible.

